# ExCCCRender

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.cache/clangd/index/: AbstractGraphicsAPI.hpp.CA52F2CAF5F2E274.idx  ConfigParser.cpp.F2E41E28A1F89576.idx  ConfigParser.hpp.18E1E471E6939269.idx  D3D11_PixelShader_Advanced.h.6956AF4AEC3205F0.idx  D3D11_PixelShader_Colors.h.33437EF1ECB78B72.idx  D3D11_PixelShader_Textures.h.1DB506F9B129E862.idx  D3D11_VertexShader.h.22FE9FCB04776F56.idx  D3D12_Blit.h.B932953CA6CE3F1E.idx  D3D12_PixelShader_Advanced.h.FDFE506C42C6C749.idx  D3D12_PixelShader_Colors.h.2173A0ACDCBBC7DA.idx  D3D12_PixelShader_Textures.h.C7746303F1A1564C.idx  D3D12_RootSig_Advanced.h.3489B57F206A60C1.idx  D3D12_RootSig_Color.h.0239024A619CD031.idx  D3D12_RootSig_Texture.h.5FBE6D42B60A8149.idx  D3D12_VertexShader_Advanced.h.3873CB7834EAB85C.idx  D3D12_VertexShader_Color.h.7620A97BB21AD906.idx  D3D12_VertexShader_Texture.h.F74CA057E68E5222.idx  D3D9_PixelShader_YUV.h.16062155034A9A8E.idx  FileParser.cpp.050D67BB93E4D9E9.idx  FileParser.hpp.2D09686315B45C4C.idx  GraphicsAPI.hpp.6870CCD34A242D6B.idx  MemoryPool.cpp.3761DCFD1090E386.idx  MemoyPool.hpp.954D741019321B3D.idx  RegexHelper.hpp.D0DF953D6ABEE9C0.idx  SDL.c.203B95E7AEDFBA34.idx  SDL.h.93120E22CB110AF0.idx  SDL_RLEaccel.c.F276F14FBBCB67C1.idx  SDL_RLEaccel_c.h.92435B2889E042BB.idx  SDL_assert.c.B457F2A5F1EB1A84.idx  SDL_assert.h.95C524A25A412875.idx  SDL_assert_c.h.6E6DA8FA32A26619.idx  SDL_asyncio.c.280108030BDE4A56.idx  SDL_asyncio.h.9E0D3C78DB9447CD.idx  SDL_asyncio_c.h.8F81133AF3821820.idx  SDL_asyncio_generic.c.43FEDE453651A41D.idx  SDL_asyncio_windows_ioring.c.E9F4A07D7983F0FF.idx  SDL_atomic.c.EEEAE06D314B8ED6.idx  SDL_atomic.h.D2B0002B8CB8BBE1.idx  SDL_audio.c.D598773A1DBD997A.idx  SDL_audio.h.633F4BBA02A0350C.idx  (+670 more)
engine/: CMakeLists.txt
engine/configs/: GrapicsAPIConfig.ini
engine/editor/: CMakeLists.txt
engine/editor/include/: editor.h
engine/editor/source/: example.cpp  main.cpp
engine/include/: pch.hpp
engine/include/asset/: Asset.md  AssetLoader.h  AssetManager.h  AssetManger.h  MeshInfo.h  SceneInfo.h
engine/include/asset/AssetLoader/: AssetLoader.h  AssimpLoader.h
engine/include/core/: traits.hpp
engine/include/core/camera/: Camera.h  CameraManager.h
engine/include/core/illumination/: Color.h  Ray.h
engine/include/core/material/: Material.h
engine/include/core/math/: Point.h
engine/include/core/math/matrix/: Matrix.hpp  MatrixBase.hpp  matrix_detail.hpp
engine/include/core/math/random/: Distribution.h  Random.h  RandomGenerator.h
engine/include/core/math/utility/: Utility.h
engine/include/core/math/vector/: Vector.hpp  VectorDetail.hpp  vector_detail.hpp
engine/include/core/object/: Box.h  Object.h  Position.h  Rectangle.h  Sphere.h
engine/include/core/scene/: HitInfo.h  Scene.md  aabb.h
engine/include/runtime/asset/: Asset.md
engine/include/runtime/camera/: camera.h
engine/include/runtime/core/: Color.h  traits.hpp
engine/include/runtime/core/Illumination/: Color.h  Point.h  Ray.h
engine/include/runtime/core/Material/: Dielectri.h  Isotropic.h  Material.h  Metal.h
engine/include/runtime/core/camera/: Camera.h  CameraManager.h
engine/include/runtime/core/math/: Point.h  Vector.h  Vector.hpp  VectorOperator.h  VectorOperator.hpp  vector_detail.hpp
engine/include/runtime/core/math/matrix/: Matrix.hpp  matrix_detail.hpp
engine/include/runtime/core/math/random/: Distribution.h  Random.h  RandomGenerator.h
engine/include/runtime/core/math/utility/: Utility.h
engine/include/runtime/core/math/vector/: Vector.hpp  VectorOperator.h  vector_detail.hpp
engine/include/runtime/core/object/: Box.h  Object.h  Position.h  Rectangle.h  Sphere.h
engine/include/tools/: RegexHelper.hpp  debug.hpp  static_for.hpp
engine/include/tools/parser/: ConfigParser.hpp  FileParser.hpp
engine/runtime/: CMakeLists.txt  stdheader.h
engine/runtime/core/math/: Vector.h
engine/runtime/platform/: AbstractGraphicsAPI.hpp  ConfigParser.cpp  ConfigParser.hpp  FileParser.cpp  FileParser.hpp  GraphicsAPI.hpp  MemoryPool.cpp  MemoyPool.hpp  Shader.hpp  VulkanAPI.cpp  VulkanAPI.hpp  VulkanGraphicsAPI.cpp  VulkanGraphicsAPI.hpp
engine/runtime/tools/: ConfigParser.cpp  ConfigParser.hpp  FileParser.cpp  FileParser.hpp  RegexHelper.hpp  RegexPatternBox.hpp  debug.hpp
engine/runtime/tools/math/: Vector.hpp
engine/src/asset/: AssetLoader..cpp  AssetManger.cpp
engine/src/core/math/utility/: Utility.cpp
engine/src/core/scene/: AABB.cpp
engine/src/editor/: main.cpp
engine/src/runtime/core/math/: Vector.cpp  VectorOperator.cpp
engine/src/runtime/core/math/utility/: Utility.cpp
engine/src/runtime/core/math/vector/: VectorOperator.cpp
engine/src/tools/parser/: ConfigParser.cpp  FileParser.cpp
lib/: fmtd.lib  thirdparty.lib
